2006-05-01  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (AC_PROG_CXX): Check for C++ unconditionally,
	and workaround harmful autoconf settings if no compiler is found.
	(PANGO): Raise minimum version to 1.10.

	* term.c (init_terminal): Make wxt the default terminal if it
	is available even if X11 is not defined.

2006-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.mgw (DESTDIR): MSYS-ify the drive letter.
	(GNUSORT): Use Unix-ish path to MSYS port of GNU sort.
	(all): Refer to default target instead of copying all its entries.
	(default): Remove config.h dependency.
	($(OBJS) $(WINOBJS) dbinary.$(O)): Add rule that they depend on
	config.h.
	($(M)bf_test.exe): Chdir to $(M), not $(D).
	(dbinary.$(O)): Input file is $<, not $^.
	(install) [WXT]: Move WX-specific installation rules here.

	* term/win.trm (WIN_enhanced_flush): Removed unused variables rc,
	cbR.

	* term/pslatex.trm (PSTEX_common_init): Avoid warning by making
	compile-time test an #if rather than an if.

	* config/makefile.mgw: Change this to expect MSYS tools to be used
	instead of the older native MINGW32 ports.  Necessitates some
	workarounds for MSYS quirks.
	(HCWPATH): Uncomment one definition, provide a usable default,
	remove the other.
	(pgnuplot.exe): Needs -HAVE_STDBOOL_H to avoid a warning.
	($(HELPFILE)): Use `-' instead of `/' for $(HCW) options, to avoid
	MSYS translating them to drive letters.
	(doc2rtf.exe, doc2tex): Strip trailing `/' off macros holding
	`../docs/' and `../term/' --- MSYS/MINGW32 gets confused by it.

2006-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* term/wxt.trm (wxt_options): Fix improper malloc for font name.

2006-04-29  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: C++, wxWidgets, cairo and pango	configuration
	tests.

	* config/makefile.mgw: Likewise.

	* src/command.c (raise_lower_command): Raise and lower commands
	for the wxWidgets terminal.

	* src/command.h : Likewise.
