@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.180 2006/05/02 00:11:38 tlecomte Exp $
+dnl $Id: configure.in,v 1.181 2006/05/04 17:41:08 tlecomte Exp $
 dnl
 AC_INIT(src/graphics.c)
 AM_CONFIG_HEADER(config.h:config.hin)
@@ -890,21 +890,25 @@ dnl  wxWidgets terminal
 
 dnl wxWidgets terminal needs C++
 dnl These tests cannot be called conditionally.
-dnl However, even if there is no C++ compiler on the system,
+dnl These tests are non-fatal on autoconf 2.58 and 2.59,
+dnl but it may change in future versions, so we redefine AC_MSG_ERROR.
+dnl Even if there is no C++ compiler on the system,
 dnl autoconf will set CXX as g++ : this must be reverted.
-AC_PROG_CXX
-AC_PROG_CXXCPP
 
-AC_LANG_PUSH([C++])
-AC_MSG_CHECKING(whether $CXX is actually working)
-AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <iostream>]],
-                [[const char hw[] = "Hello, World\n"; std::cout << hw;]])],
-	[AC_MSG_RESULT([yes])
-	working_cxx=yes],
-	[AC_MSG_RESULT([no])
-	working_cxx=no
-	CXX=$CC ])
-AC_LANG_POP([C++])
+m4_pushdef([AC_MSG_ERROR],[cxxerror=yes])
+AC_PROG_CXX
+m4_popdef([AC_MSG_ERROR])
+
+if test "x${cxxerror}" != "xyes"; then
+  AC_LANG_PUSH([C++])
+  AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <iostream>]],
+	[[const char hw[] = "Hello, World\n"; std::cout << hw;]])],
+	[cxxerror=no
+	AC_PROG_CXXCPP],
+	[cxxerror=yes
+	CXX=$CC])
+  AC_LANG_POP([C++])
+fi
 
 AC_ARG_ENABLE(wxwidgets, [  --disable-wxwidgets      wxWidgets terminal (default enabled)], enable_wxwidgets=no, enable_wxwidgets=yes)
 
@@ -914,7 +918,7 @@ then
 	enable_wxwidgets_ok=yes
 
 	dnl Check for the C++ compiler
-	if test "${working_cxx}" = "no"; then
+	if test "x${cxxerror}" = "xyes"; then
 		AC_MSG_WARN([No C++ compiler found. The wxWidgets terminal will not be compiled.])
 		enable_wxwidgets_ok=no
 	fi
@@ -988,8 +992,6 @@ then
 	AC_SUBST(WX_LIBS)
 	AC_DEFINE(WXWIDGETS,1,
             [ Define if you want the wxwidgets terminal. ])
-	WX_OBJ='wxterminal/wxt_gui.$(OBJEXT) wxterminal/gp_cairo.$(OBJEXT)'
-	AC_SUBST([WX_OBJ])
 fi
 
 AM_CONDITIONAL(BUILD_WXWIDGETS, test "${enable_wxwidgets_ok}" = yes)
